uweclang/query/grammar/QueryParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .QueryListener import QueryListener
    from .QueryVisitor import QueryVisitor
else:
    from QueryListener import QueryListener
    from QueryVisitor import QueryVisitor



class QueryParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"';'", u"'define'", u"'~'", u"'('", 
                     u"')'", u"'::'", u"':'", u"'['", u"','", u"']'", u"'\\'", 
                     u"'?'", u"'{'", u"'}'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"ExplicitRegex", 
                      u"Digits", u"Symbol", u"WhiteSpace", u"NewLine", u"BlockComment", 
                      u"LineComment" ]

    RULE_queryDocument = 0
    RULE_documentItem = 1
    RULE_query = 2
    RULE_termNegatable = 3
    RULE_term = 4
    RULE_matchFunction = 5
    RULE_functionalNegatable = 6
    RULE_functional = 7
    RULE_identifier = 8
    RULE_backReference = 9
    RULE_quantifier = 10
    RULE_number = 11
    RULE_ws = 12

    ruleNames =  [ u"queryDocument", u"documentItem", u"query", u"termNegatable", 
                   u"term", u"matchFunction", u"functionalNegatable", u"functional", 
                   u"identifier", u"backReference", u"quantifier", u"number", 
                   u"ws" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    ExplicitRegex=15
    Digits=16
    Symbol=17
    WhiteSpace=18
    NewLine=19
    BlockComment=20
    LineComment=21

    def __init__(self, input):
        super(QueryParser, self).__init__(input)
        self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class QueryDocumentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QueryParser.QueryDocumentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def documentItem(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.DocumentItemContext)
            else:
                return self.getTypedRuleContext(QueryParser.DocumentItemContext,i)


        def EOF(self, i=None):
            if i is None:
                return self.getTokens(QueryParser.EOF)
            else:
                return self.getToken(QueryParser.EOF, i)

        def ws(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.WsContext)
            else:
                return self.getTypedRuleContext(QueryParser.WsContext,i)


        def getRuleIndex(self):
            return QueryParser.RULE_queryDocument

        def enterRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.enterQueryDocument(self)

        def exitRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.exitQueryDocument(self)

        def accept(self, visitor):
            if isinstance( visitor, QueryVisitor ):
                return visitor.visitQueryDocument(self)
            else:
                return visitor.visitChildren(self)




    def queryDocument(self):

        localctx = QueryParser.QueryDocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_queryDocument)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << QueryParser.T__1) | (1 << QueryParser.T__2) | (1 << QueryParser.T__3) | (1 << QueryParser.T__6) | (1 << QueryParser.T__7) | (1 << QueryParser.T__10) | (1 << QueryParser.ExplicitRegex) | (1 << QueryParser.Digits) | (1 << QueryParser.Symbol) | (1 << QueryParser.WhiteSpace) | (1 << QueryParser.BlockComment) | (1 << QueryParser.LineComment))) != 0):
                self.state = 27
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << QueryParser.WhiteSpace) | (1 << QueryParser.BlockComment) | (1 << QueryParser.LineComment))) != 0):
                    self.state = 26
                    self.ws()


                self.state = 29
                self.documentItem()
                self.state = 31
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << QueryParser.WhiteSpace) | (1 << QueryParser.BlockComment) | (1 << QueryParser.LineComment))) != 0):
                    self.state = 30
                    self.ws()


                self.state = 33
                _la = self._input.LA(1)
                if not(_la==QueryParser.EOF or _la==QueryParser.T__0):
                    self._errHandler.recoverInline(self)
                else:
                    self.consume()
                self.state = 35
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 34
                    self.ws()


                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DocumentItemContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QueryParser.DocumentItemContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return QueryParser.RULE_documentItem

     
        def copyFrom(self, ctx):
            super(QueryParser.DocumentItemContext, self).copyFrom(ctx)



    class DefinitionContext(DocumentItemContext):

        def __init__(self, parser, ctx): # actually a QueryParser.DocumentItemContext)
            super(QueryParser.DefinitionContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ws(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.WsContext)
            else:
                return self.getTypedRuleContext(QueryParser.WsContext,i)

        def identifier(self):
            return self.getTypedRuleContext(QueryParser.IdentifierContext,0)

        def query(self):
            return self.getTypedRuleContext(QueryParser.QueryContext,0)


        def enterRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.enterDefinition(self)

        def exitRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.exitDefinition(self)

        def accept(self, visitor):
            if isinstance( visitor, QueryVisitor ):
                return visitor.visitDefinition(self)
            else:
                return visitor.visitChildren(self)


    class QueryStatementContext(DocumentItemContext):

        def __init__(self, parser, ctx): # actually a QueryParser.DocumentItemContext)
            super(QueryParser.QueryStatementContext, self).__init__(parser)
            self.copyFrom(ctx)

        def query(self):
            return self.getTypedRuleContext(QueryParser.QueryContext,0)


        def enterRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.enterQueryStatement(self)

        def exitRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.exitQueryStatement(self)

        def accept(self, visitor):
            if isinstance( visitor, QueryVisitor ):
                return visitor.visitQueryStatement(self)
            else:
                return visitor.visitChildren(self)



    def documentItem(self):

        localctx = QueryParser.DocumentItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_documentItem)
        try:
            self.state = 51
            token = self._input.LA(1)
            if token in [QueryParser.T__2, QueryParser.T__3, QueryParser.T__6, QueryParser.T__7, QueryParser.T__10, QueryParser.ExplicitRegex, QueryParser.Digits, QueryParser.Symbol]:
                localctx = QueryParser.QueryStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.query()

            elif token in [QueryParser.T__1]:
                localctx = QueryParser.DefinitionContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.match(QueryParser.T__1)
                self.state = 44
                self.ws()
                self.state = 45
                self.identifier()
                self.state = 46
                self.ws()
                self.state = 47
                self.query()
                self.state = 49
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 48
                    self.ws()



            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QueryContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QueryParser.QueryContext, self).__init__(parent, invokingState)
            self.parser = parser

        def termNegatable(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.TermNegatableContext)
            else:
                return self.getTypedRuleContext(QueryParser.TermNegatableContext,i)


        def ws(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.WsContext)
            else:
                return self.getTypedRuleContext(QueryParser.WsContext,i)


        def getRuleIndex(self):
            return QueryParser.RULE_query

        def enterRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.enterQuery(self)

        def exitRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.exitQuery(self)

        def accept(self, visitor):
            if isinstance( visitor, QueryVisitor ):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)




    def query(self):

        localctx = QueryParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.termNegatable()
            self.state = 59
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 54
                    self.ws()
                    self.state = 55
                    self.termNegatable() 
                self.state = 61
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TermNegatableContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QueryParser.TermNegatableContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return QueryParser.RULE_termNegatable

     
        def copyFrom(self, ctx):
            super(QueryParser.TermNegatableContext, self).copyFrom(ctx)



    class PositiveTermContext(TermNegatableContext):

        def __init__(self, parser, ctx): # actually a QueryParser.TermNegatableContext)
            super(QueryParser.PositiveTermContext, self).__init__(parser)
            self.copyFrom(ctx)

        def term(self):
            return self.getTypedRuleContext(QueryParser.TermContext,0)


        def enterRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.enterPositiveTerm(self)

        def exitRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.exitPositiveTerm(self)

        def accept(self, visitor):
            if isinstance( visitor, QueryVisitor ):
                return visitor.visitPositiveTerm(self)
            else:
                return visitor.visitChildren(self)


    class NegativeTermContext(TermNegatableContext):

        def __init__(self, parser, ctx): # actually a QueryParser.TermNegatableContext)
            super(QueryParser.NegativeTermContext, self).__init__(parser)
            self.copyFrom(ctx)

        def term(self):
            return self.getTypedRuleContext(QueryParser.TermContext,0)


        def enterRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.enterNegativeTerm(self)

        def exitRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.exitNegativeTerm(self)

        def accept(self, visitor):
            if isinstance( visitor, QueryVisitor ):
                return visitor.visitNegativeTerm(self)
            else:
                return visitor.visitChildren(self)



    def termNegatable(self):

        localctx = QueryParser.TermNegatableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_termNegatable)
        try:
            self.state = 65
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = QueryParser.NegativeTermContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.match(QueryParser.T__2)
                self.state = 63
                self.term()
                pass

            elif la_ == 2:
                localctx = QueryParser.PositiveTermContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.term()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QueryParser.TermContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return QueryParser.RULE_term

     
        def copyFrom(self, ctx):
            super(QueryParser.TermContext, self).copyFrom(ctx)



    class SimpleTermContext(TermContext):

        def __init__(self, parser, ctx): # actually a QueryParser.TermContext)
            super(QueryParser.SimpleTermContext, self).__init__(parser)
            self.copyFrom(ctx)

        def matchFunction(self):
            return self.getTypedRuleContext(QueryParser.MatchFunctionContext,0)


        def enterRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.enterSimpleTerm(self)

        def exitRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.exitSimpleTerm(self)

        def accept(self, visitor):
            if isinstance( visitor, QueryVisitor ):
                return visitor.visitSimpleTerm(self)
            else:
                return visitor.visitChildren(self)


    class IntersectionTermContext(TermContext):

        def __init__(self, parser, ctx): # actually a QueryParser.TermContext)
            super(QueryParser.IntersectionTermContext, self).__init__(parser)
            self.copyFrom(ctx)

        def matchFunction(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.MatchFunctionContext)
            else:
                return self.getTypedRuleContext(QueryParser.MatchFunctionContext,i)


        def enterRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.enterIntersectionTerm(self)

        def exitRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.exitIntersectionTerm(self)

        def accept(self, visitor):
            if isinstance( visitor, QueryVisitor ):
                return visitor.visitIntersectionTerm(self)
            else:
                return visitor.visitChildren(self)


    class SubQueryTermContext(TermContext):

        def __init__(self, parser, ctx): # actually a QueryParser.TermContext)
            super(QueryParser.SubQueryTermContext, self).__init__(parser)
            self.copyFrom(ctx)

        def query(self):
            return self.getTypedRuleContext(QueryParser.QueryContext,0)

        def quantifier(self):
            return self.getTypedRuleContext(QueryParser.QuantifierContext,0)


        def enterRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.enterSubQueryTerm(self)

        def exitRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.exitSubQueryTerm(self)

        def accept(self, visitor):
            if isinstance( visitor, QueryVisitor ):
                return visitor.visitSubQueryTerm(self)
            else:
                return visitor.visitChildren(self)



    def term(self):

        localctx = QueryParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.state = 81
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = QueryParser.SubQueryTermContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.match(QueryParser.T__3)
                self.state = 68
                self.query()
                self.state = 69
                self.match(QueryParser.T__4)
                self.state = 71
                _la = self._input.LA(1)
                if _la==QueryParser.T__11 or _la==QueryParser.T__12:
                    self.state = 70
                    self.quantifier()


                pass

            elif la_ == 2:
                localctx = QueryParser.SimpleTermContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.matchFunction()
                pass

            elif la_ == 3:
                localctx = QueryParser.IntersectionTermContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.matchFunction()
                self.state = 77 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 75
                    self.match(QueryParser.T__5)
                    self.state = 76
                    self.matchFunction()
                    self.state = 79 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==QueryParser.T__5):
                        break

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MatchFunctionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QueryParser.MatchFunctionContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return QueryParser.RULE_matchFunction

     
        def copyFrom(self, ctx):
            super(QueryParser.MatchFunctionContext, self).copyFrom(ctx)



    class DirectApplyContext(MatchFunctionContext):

        def __init__(self, parser, ctx): # actually a QueryParser.MatchFunctionContext)
            super(QueryParser.DirectApplyContext, self).__init__(parser)
            self.copyFrom(ctx)

        def functionalNegatable(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.FunctionalNegatableContext)
            else:
                return self.getTypedRuleContext(QueryParser.FunctionalNegatableContext,i)


        def enterRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.enterDirectApply(self)

        def exitRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.exitDirectApply(self)

        def accept(self, visitor):
            if isinstance( visitor, QueryVisitor ):
                return visitor.visitDirectApply(self)
            else:
                return visitor.visitChildren(self)


    class BackReferenceApplyContext(MatchFunctionContext):

        def __init__(self, parser, ctx): # actually a QueryParser.MatchFunctionContext)
            super(QueryParser.BackReferenceApplyContext, self).__init__(parser)
            self.copyFrom(ctx)

        def backReference(self):
            return self.getTypedRuleContext(QueryParser.BackReferenceContext,0)

        def functionalNegatable(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.FunctionalNegatableContext)
            else:
                return self.getTypedRuleContext(QueryParser.FunctionalNegatableContext,i)


        def enterRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.enterBackReferenceApply(self)

        def exitRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.exitBackReferenceApply(self)

        def accept(self, visitor):
            if isinstance( visitor, QueryVisitor ):
                return visitor.visitBackReferenceApply(self)
            else:
                return visitor.visitChildren(self)


    class MatchApplyContext(MatchFunctionContext):

        def __init__(self, parser, ctx): # actually a QueryParser.MatchFunctionContext)
            super(QueryParser.MatchApplyContext, self).__init__(parser)
            self.copyFrom(ctx)

        def functionalNegatable(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.FunctionalNegatableContext)
            else:
                return self.getTypedRuleContext(QueryParser.FunctionalNegatableContext,i)


        def enterRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.enterMatchApply(self)

        def exitRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.exitMatchApply(self)

        def accept(self, visitor):
            if isinstance( visitor, QueryVisitor ):
                return visitor.visitMatchApply(self)
            else:
                return visitor.visitChildren(self)



    def matchFunction(self):

        localctx = QueryParser.MatchFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_matchFunction)
        self._la = 0 # Token type
        try:
            self.state = 105
            token = self._input.LA(1)
            if token in [QueryParser.T__6]:
                localctx = QueryParser.DirectApplyContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 85 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 83
                    self.match(QueryParser.T__6)
                    self.state = 84
                    self.functionalNegatable()
                    self.state = 87 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==QueryParser.T__6):
                        break


            elif token in [QueryParser.T__2, QueryParser.T__7, QueryParser.ExplicitRegex, QueryParser.Digits, QueryParser.Symbol]:
                localctx = QueryParser.MatchApplyContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.functionalNegatable()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==QueryParser.T__6:
                    self.state = 90
                    self.match(QueryParser.T__6)
                    self.state = 91
                    self.functionalNegatable()
                    self.state = 96
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)


            elif token in [QueryParser.T__10]:
                localctx = QueryParser.BackReferenceApplyContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.backReference()
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==QueryParser.T__6:
                    self.state = 98
                    self.match(QueryParser.T__6)
                    self.state = 99
                    self.functionalNegatable()
                    self.state = 104
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)


            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionalNegatableContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QueryParser.FunctionalNegatableContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return QueryParser.RULE_functionalNegatable

     
        def copyFrom(self, ctx):
            super(QueryParser.FunctionalNegatableContext, self).copyFrom(ctx)



    class NegativeFunctionalContext(FunctionalNegatableContext):

        def __init__(self, parser, ctx): # actually a QueryParser.FunctionalNegatableContext)
            super(QueryParser.NegativeFunctionalContext, self).__init__(parser)
            self.copyFrom(ctx)

        def functional(self):
            return self.getTypedRuleContext(QueryParser.FunctionalContext,0)


        def enterRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.enterNegativeFunctional(self)

        def exitRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.exitNegativeFunctional(self)

        def accept(self, visitor):
            if isinstance( visitor, QueryVisitor ):
                return visitor.visitNegativeFunctional(self)
            else:
                return visitor.visitChildren(self)


    class PositiveFunctionalContext(FunctionalNegatableContext):

        def __init__(self, parser, ctx): # actually a QueryParser.FunctionalNegatableContext)
            super(QueryParser.PositiveFunctionalContext, self).__init__(parser)
            self.copyFrom(ctx)

        def functional(self):
            return self.getTypedRuleContext(QueryParser.FunctionalContext,0)


        def enterRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.enterPositiveFunctional(self)

        def exitRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.exitPositiveFunctional(self)

        def accept(self, visitor):
            if isinstance( visitor, QueryVisitor ):
                return visitor.visitPositiveFunctional(self)
            else:
                return visitor.visitChildren(self)



    def functionalNegatable(self):

        localctx = QueryParser.FunctionalNegatableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_functionalNegatable)
        try:
            self.state = 110
            token = self._input.LA(1)
            if token in [QueryParser.T__2]:
                localctx = QueryParser.NegativeFunctionalContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.match(QueryParser.T__2)
                self.state = 108
                self.functional()

            elif token in [QueryParser.T__7, QueryParser.ExplicitRegex, QueryParser.Digits, QueryParser.Symbol]:
                localctx = QueryParser.PositiveFunctionalContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.functional()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionalContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(QueryParser.FunctionalContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return QueryParser.RULE_functional

     
        def copyFrom(self, ctx):
            super(QueryParser.FunctionalContext, self).copyFrom(ctx)



    class ListFunctionalContext(FunctionalContext):

        def __init__(self, parser, ctx): # actually a QueryParser.FunctionalContext)
            super(QueryParser.ListFunctionalContext, self).__init__(parser)
            self.copyFrom(ctx)

        def functional(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.FunctionalContext)
            else:
                return self.getTypedRuleContext(QueryParser.FunctionalContext,i)

        def ws(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.WsContext)
            else:
                return self.getTypedRuleContext(QueryParser.WsContext,i)


        def enterRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.enterListFunctional(self)

        def exitRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.exitListFunctional(self)

        def accept(self, visitor):
            if isinstance( visitor, QueryVisitor ):
                return visitor.visitListFunctional(self)
            else:
                return visitor.visitChildren(self)


    class ImplicitFunctionalContext(FunctionalContext):

        def __init__(self, parser, ctx): # actually a QueryParser.FunctionalContext)
            super(QueryParser.ImplicitFunctionalContext, self).__init__(parser)
            self.copyFrom(ctx)

        def Symbol(self):
            return self.getToken(QueryParser.Symbol, 0)
        def Digits(self):
            return self.getToken(QueryParser.Digits, 0)

        def enterRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.enterImplicitFunctional(self)

        def exitRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.exitImplicitFunctional(self)

        def accept(self, visitor):
            if isinstance( visitor, QueryVisitor ):
                return visitor.visitImplicitFunctional(self)
            else:
                return visitor.visitChildren(self)


    class ExplicitFunctionalContext(FunctionalContext):

        def __init__(self, parser, ctx): # actually a QueryParser.FunctionalContext)
            super(QueryParser.ExplicitFunctionalContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ExplicitRegex(self):
            return self.getToken(QueryParser.ExplicitRegex, 0)

        def enterRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.enterExplicitFunctional(self)

        def exitRule(self, listener):
            if isinstance( listener, QueryListener ):
                listener.exitExplicitFunctional(self)

        def accept(self, visitor):
            if isinstance( visitor, QueryVisitor ):
                return visitor.visitExplicitFunctional(self)
            else:
                return visitor.visitChildren(self)



    def functional(self):

        localctx = QueryParser.FunctionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_functional)
        self._la = 0 # Token type
        try:
            self.state = 144
            token = self._input.LA(1)
            if token in [QueryParser.ExplicitRegex]:
                localctx = QueryParser.ExplicitFunctionalContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.match(QueryParser.ExplicitRegex)

            elif token in [QueryParser.Symbol]:
                localctx = QueryParser.ImplicitFunctionalContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.match(QueryParser.Symbol)

            elif token in [QueryParser.Digits]:
                localctx = QueryParser.ImplicitFunctionalContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.match(QueryParser.Digits)

            elif token in [QueryParser.T__7]:
                localctx = QueryParser.ListFunctionalContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 115
                self.match(QueryParser.T__7)
                self.state = 117
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << QueryParser.WhiteSpace) | (1 << QueryParser.BlockComment) | (1 << QueryParser.LineComment))) != 0):
                    self.state = 116
                    self.ws()


                self.state = 119
                self.functional()
                self.state = 121
                la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
                if la_ == 1:
                    self.state = 120
                    self.ws()

